# bvg-board

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/bvg_board/: __init__.py  __main__.py  bvg_api.py  cli.py  config.py  format.py  weather.py
tests/: conftest.py  test_bvg_api.py  test_cli.py  test_config.py  test_format.py  test_weather.py
