[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bvg-board"
version = "0.1.0"
description = "Show BVG departures with local weather in your terminal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "platformdirs>=4.2,<5.0",
  "rich>=13.7,<14.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-httpx>=0.30,<1.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
bvg-board = "bvg_board.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bvg_board"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]
